# PathTracer

./: .gitignore  CMakeLists.txt  Camera.c  Camera.h  Hittable.h  KubsMath.h  Lambertian.h  Material.c  PPM.c  PPM.h  README.md  Ray.c  Ray.h  SDLWindow.c  SDLWindow.h  Scene.c  Scene.h  Statistic.txt  Vec3.h  \  main.c  run.sh
include/: SDL_config.h
src/: AABB.h  BVH.c  BVH.h  Camera.c  Camera.h  Dielectric.c  Dielectric.h  DiffuseLight.c  DiffuseLight.h  Hitable.c  Hittable.h  KubsMath.h  Lambertian.c  Lambertian.h  Material.c  Material.h  Metal.c  Metal.h  Model.c  Model.h  PPM.c  Ray.c  Ray.h  SDLWindow.c  SDLWindow.h  Scene.c  Scene.h  SceneSelector.c  SceneSelector.h  Sphere.c  Sphere.h  TestSuite.h  Triangle.c  Triangle.h  Vec3.h  main.c
