cmake_minimum_required(VERSION 3.19)
project(RayTracer)
add_compile_options(-O3 -Wall -lm -pg)
find_library(MATH_LIBRARY m)
find_library(Threads threads)
add_link_options(-pg)
add_executable(RayTracer main.c PPM.c Ray.c Hitable.c Sphere.c Scene.c Camera.c Lambertian.c Metal.c Material.c Dielectric.c)
if(MATH_LIBRARY)
	target_link_libraries(RayTracer PUBLIC ${MATH_LIBRARY})
    target_link_libraries(RayTracer PUBLIC ${THREADS})
endif()
