cmake_minimum_required(VERSION 3.7)
project(RayTracer)
add_compile_options(-O3 -Wall -lm -g)
find_library(MATH_LIBRARY m)
find_library(Threads threads)
add_link_options()
add_executable(RayTracer main.c PPM.c Ray.c Hitable.c Sphere.c Scene.c Camera.c Lambertian.c Metal.c Material.c Dielectric.c SDLWindow.c)
if(MATH_LIBRARY)
	target_link_libraries(RayTracer ${MATH_LIBRARY})
    target_link_libraries(RayTracer ${THREADS})
endif()
find_package(SDL2 REQUIRED)
include_directories(RayTracer ${SDL2_INCLUDE_DIRS})

target_link_libraries(RayTracer ${SDL2_LIBRARIES})
