cmake_minimum_required(VERSION 3.7)
project(RayTracer)
add_compile_options(-O3 -Wall -lm -g -Werror)
find_library(MATH_LIBRARY m)
find_library(Threads threads)
add_link_options()
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")
add_executable(RayTracer ${SOURCES})
if(MATH_LIBRARY)
	target_link_libraries(RayTracer ${MATH_LIBRARY})
    target_link_libraries(RayTracer ${THREADS})
endif()
find_package(SDL2 REQUIRED)
include_directories(includes)

target_link_libraries(RayTracer ${SDL2_LIBRARIES})
